<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlack"
    android:layoutDirection="ltr"
    tools:context=".activity.MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.23" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/colorBlack"
        android:padding="@dimen/padding25"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/img_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_info_outined"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_hello"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/circularstd_medium"
            android:text="@string/hi_dr"
            android:textColor="@android:color/white"
            android:textSize="@dimen/size30"
            app:layout_constraintBottom_toTopOf="@+id/tv_search"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/circularstd_book"
            android:text="@string/select_or_search_the_drug"
            android:textColor="@color/colorGrey"
            android:textSize="@dimen/size14"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <pl.droidsonroids.gif.GifImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/waving_hand"
            app:layout_constraintBottom_toTopOf="@+id/tv_search"
            app:layout_constraintStart_toEndOf="@+id/tv_hello"
            app:layout_constraintTop_toTopOf="@+id/tv_hello" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/bg_constraint_drugs"
        android:paddingStart="@dimen/padding25"
        android:paddingTop="@dimen/padding12"
        android:paddingEnd="@dimen/padding25"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        <EditText
            android:id="@+id/et_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:drawableStart="@drawable/ic_icon_color"
            android:drawablePadding="@dimen/ic_padding11"
            android:ems="10"
            android:hint="@string/type_drug_name_here"
            android:inputType="textPersonName"
            android:padding="@dimen/padding16"
            android:textSize="@dimen/size13"
            android:fontFamily="@font/circularstd_book"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_drugs"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/mt_rv10"
            android:background="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_search" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>